Update all code to latest state

--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -316,8 +316,7 @@ button div {
 }
 
 .btn-create:hover {
-  background-color: #28abe2;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  background-color: #4589ff;
 }
 
 .btn-create img {
