--- a/styles/board.css
+++ b/styles/board.css
@@ -243,18 +243,6 @@ Overlay
   opacity: 1;
 }
 
-/* .overlay {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  z-index: 11;
-  opacity: 0;
-  transition: opacity 250ms ease;
-} */
-
 .overlay.transparent {
   background: transparent !important;
 }
@@ -280,7 +268,8 @@ Overlay
 }
 
 .overlay-content {
-  min-width: 420px;
+  max-width: 420px;
+  width: 100%;
   height: auto;
   background-color: #fff;
   padding: 48px 40px;
@@ -533,7 +522,11 @@ Edit-Task
 }
 
 /* -------------------------------------------
-Media queries
+Media queries Task-Overlay
+---------------------------------------------- */
+
+/* -------------------------------------------
+Media queries Board
 ---------------------------------------------- */
 
 @media (max-width: 1200px) {
