--- a/styles/login.css
+++ b/styles/login.css
@@ -5,23 +5,23 @@
 .signup {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 24px;
 }
 
-.signup-btn {
+/* .signup-btn {
   background-color: #2a3e52;
   color: white;
   border: none;
   border-radius: 8px;
-  padding: 8px 16px;
+  padding: 15px 24px;
   font-weight: bold;
   cursor: pointer;
   text-decoration: none;
-}
+} */
 
-.signup-btn:hover {
+/* .signup-btn:hover {
   background-color: #28abe2;
-}
+} */
 
 .signup-footer {
   display: none;
@@ -33,14 +33,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 512px;
   max-width: 512px;
+  width: 100%;
+  /* margin: 0 auto; */
   text-align: center;
   background-color: white;
   border-radius: 24px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
   padding: 40px 80px;
-  margin: 0 16px 84px 16px;
 }
 
 .login-title {
@@ -49,13 +49,13 @@
   margin-bottom: 8px;
 }
 
-.underline {
+/* .underline {
   width: 80px;
   height: 3px;
   background-color: #29abe2;
   margin: 0 auto 32px;
   border-radius: 2px;
-}
+} */
 
 .error-message {
   color: #e74c3c;
@@ -78,7 +78,8 @@
 .button-group {
   display: flex;
   justify-content: center;
-  gap: 12px;
+  gap: 22px;
+  margin-top: 30px;
 }
 
 .btn:disabled {
@@ -176,7 +177,33 @@ Media queries
   .signup-header {
     display: none;
   }
+
+  .login-container {
+    padding: 30px 40px;
+  }
+
   .signup-footer {
     display: flex;
+    align-items: center;
+    margin-top: 64px;
+  }
+
+  .button-group {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 180px;
+    gap: 16px;
+    margin-top: 22px;
+  }
+
+  .login-input {
+    width: 100%;
+  }
+}
+
+@media (max-width: 410px) {
+  .login-container {
+    padding: 30px 16px;
   }
 }
