--- a/styles/signup.css
+++ b/styles/signup.css
@@ -39,7 +39,7 @@ body {
 } */
 
 .join-logo-signup {
-  width: 100px;
+  width: 60px;
   height: auto;
   /* padding: 30px; */
 }
@@ -65,6 +65,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .signup-container {
@@ -74,7 +76,8 @@ body {
   padding: 40px;
   border-radius: 24px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   text-align: center;
   margin-bottom: 84px;
 }
@@ -90,7 +93,7 @@ body {
   width: 85px;
   height: 4px;
   background-color: #29abe2;
-  margin: 0 auto 32px;
+  margin: 4px auto 32px;
   border-radius: 2px;
 }
 
@@ -122,7 +125,8 @@ body {
 }
 
 .checkbox-container {
-  padding: 0px 10px 18px;
+  color: #a8a8a8;
+  padding: 18px 10px 30px;
 }
 
 .primary {
@@ -160,8 +164,19 @@ body {
   font-weight: bold;
 }
 
-.btn:hover {
-  /* box-shadow: 5px 10px; */
+.signup-btn {
+  background-color: #2a3e52;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 15px 24px;
+  font-weight: bold;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.signup-btn:hover {
+  background-color: #28abe2;
 }
 
 .signup-success {
@@ -188,4 +203,16 @@ body {
   font-weight: 600;
 }
 
-/* ------------------- */
+/* -------------------------------------------
+Media queries
+---------------------------------------------- */
+
+@media (max-width: 500px) {
+  .signup-container {
+    padding: 24px 16px;
+  }
+
+  .signup-input {
+    width: 100%;
+  }
+}
