--- a/styles/summary.css
+++ b/styles/summary.css
@@ -25,6 +25,14 @@
   border-radius: 10px;
 }
 
+.divider-mobile {
+  display: none;
+  width: 48px;
+  height: 3px;
+  background-color: #29abe2;
+  border-radius: 10px;
+}
+
 /* ------------------------------ dashboard ------------------------------ */
 
 .dashboard-summary {
@@ -92,6 +100,12 @@
   background-color: #d1d1d1;
   border-radius: 10px;
   margin: 0 32px;
+}
+
+.deadline {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .metric-count {
@@ -190,4 +204,122 @@
   grid-column: span 2 / span 2;
   grid-column-start: 5;
   grid-row-start: 3;
+}
+
+@media (max-width: 850px) {
+  #content-wrapper {
+    padding-top: 48px !important;
+    margin: 0 32px;
+  }
+
+  .main-wrapper {
+    margin-left: 0 !important;
+  }
+
+  .header-title {
+    margin-bottom: 24px;
+  }
+
+  .header-title {
+    justify-content: center;
+  }
+
+  .dashboard-summary {
+    flex-direction: column-reverse;
+  }
+
+  @keyframes fadeout {
+    50% {
+      opacity: 1;
+    }
+
+    90% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+
+  .greeting {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #f6f7f8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 0;
+    animation-name: fadeout;
+    animation-duration: 1s;
+    animation-iteration-count: unset;
+    animation-fill-mode: forwards;
+  }
+
+  .parent {
+    grid-template-rows: repeat(3, 132px);
+  }
+}
+
+@media (max-width: 590px) {
+  .header-title {
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 0px;
+  }
+
+  .header-title h2 {
+    margin-bottom: 16px;
+  }
+
+  .divider {
+    display: none;
+  }
+
+  .divider-mobile {
+    display: block;
+  }
+
+  .divider-urgent {
+    margin: 0 16px;
+  }
+}
+
+@media (max-width: 400px) {
+  #content-wrapper {
+    margin: 0 16px;
+  }
+
+  .metric-icon {
+    height: 40px !important;
+    width: 40px !important;
+  }
+
+  .metric-urgent-icon {
+    height: 40px;
+    width: 40px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .metric-urgent-icon img {
+    width: 20px;
+    height: 20px;
+  }
+
+  .metric-label {
+    font-size: 0.7rem;
+  }
+
+  .parent {
+    grid-template-rows: repeat(3, 116px);
+  }
 }
