--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,3 +1,7 @@
+body {
+  flex-direction: row;
+}
+
 #contact-wrapper {
   flex: 1;
   overflow: auto;
@@ -623,6 +627,10 @@ h3 {
 }
 
 @media (max-width: 992px) {
+  body {
+    flex-direction: column-reverse;
+  }
+
   .modal {
     flex-direction: column;
     width: 480px;
