--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -357,7 +357,20 @@ button div {
   max-height: 200px;
   width: 364px;
   background-color: white;
-  overflow-y: scroll;
+  overflow-y: auto;
+  box-shadow: 0px 8px 10px rgb(209, 209, 209, 0.65);
+  border-radius: 4px 4px 8px 8px;
+}
+
+.scrollbar-styling::-webkit-scrollbar-thumb {
+  background-color: #d1d1d1;
+  border: 4px solid transparent;
+  border-radius: 8px;
+  background-clip: padding-box;  
+}
+
+.scrollbar-styling::-webkit-scrollbar {
+  width: 16px;
 }
 
 .assigned-icons-container {
@@ -373,6 +386,8 @@ button div {
   height: auto;
   width: 100%;
   background-color: white;
+  box-shadow: 0px 8px 10px rgb(209, 209, 209, 0.65);
+  border-radius: 4px 4px 8px 8px;
 }
 
 .single-user-container {
