--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -29,7 +29,7 @@ button div {
 
 .header-task {
   margin-bottom: 32px;
-  font-size: 40px;
+  font-size: 3rem;
 }
 
 .tasks-form-container {
@@ -95,7 +95,6 @@ button div {
   border: 1px solid #d1d1d1;
   border-radius: 8px;
   background-color: white;
-  /* cursor: pointer; */
 }
 
 .date-field {
@@ -134,7 +133,6 @@ button div {
   flex-grow: 1;
   border: none;
   min-width: 0;
-  /* cursor: pointer; */
 }
 
 .input-container input:focus {
@@ -345,7 +343,6 @@ button div {
   width: 100vw;
   height: 100vh;
   z-index: 11;
-  /* background: rgba(0, 0, 0, 0.7); */
 }
 
 .assigned-dropdown {
@@ -366,7 +363,7 @@ button div {
   background-color: #d1d1d1;
   border: 4px solid transparent;
   border-radius: 8px;
-  background-clip: padding-box;  
+  background-clip: padding-box;
 }
 
 .scrollbar-styling::-webkit-scrollbar {
@@ -679,9 +676,17 @@ button div {
     flex-direction: column-reverse;
     gap: 32px;
   }
+
+  .addTask-Container {
+    padding: 0 32px;
+  }
 }
 
 @media (max-width: 480px) {
+  .header-task {
+    font-size: 2.5rem;
+  }
+
   .tasks-form-container {
     padding: 0 16px !important;
   }
@@ -694,7 +699,7 @@ button div {
     font-size: 14px;
   }
 
-  .priority-btn-container button {    
+  .priority-btn-container button {
     font-size: 14px;
   }
 
@@ -733,9 +738,9 @@ button div {
     font-size: 14px;
   }
 
-  input::placeholder {
+  /* input::placeholder {
     font-size: 14px;
-  }
+  } */
 
   .sub-item input {
     font-size: 14px;
