--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,3 +1,7 @@
+.main-wrapper {
+  margin: 64px 0 32px 64px;
+}
+
 /* ------------------------------ header title ------------------------------ */
 
 .header-title {
@@ -291,7 +295,15 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 480px) {
+  .header-title h1 {
+    font-size: 2.5rem;
+  }
+
+  .header-title h2 {
+    font-size: 1rem;
+  }
+
   #content-wrapper {
     margin: 0 16px;
   }
