--- a/styles/summary.css
+++ b/styles/summary.css
@@ -213,7 +213,7 @@
 @media (max-width: 850px) {
   #content-wrapper {
     padding-top: 48px !important;
-    margin: 0 32px;
+    margin: 0 64px;
   }
 
   .main-wrapper {
@@ -271,6 +271,10 @@
 }
 
 @media (max-width: 590px) {
+  #content-wrapper {
+    margin: 0 32px;
+  }
+
   .header-title {
     justify-content: flex-start;
     align-items: flex-start;
