--- a/styles/siderbar.css
+++ b/styles/siderbar.css
@@ -57,7 +57,7 @@ a {
 
 @media (max-width: 992px) {
   body {
-    flex-direction: column-reverse;
+    flex-direction: column-reverse !important;
   }
 
   .sidebar-wrapper {
