--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -352,7 +352,7 @@ button div {
   gap: 3px;
   position: absolute;
   max-height: 200px;
-  width: 364px;
+  width: 100%;
   background-color: white;
   overflow-y: auto;
   box-shadow: 0px 8px 10px rgb(209, 209, 209, 0.65);
@@ -603,10 +603,6 @@ button div {
   }
 
   .addTask-Container {
-    width: 300px;
-  }
-
-  .assigned-dropdown {
     width: 300px;
   }
 }
