--- a/styles/board.css
+++ b/styles/board.css
@@ -98,6 +98,13 @@ Board
   gap: 16px;
 }
 
+.no-select {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
 .column {
   flex: 1;
   min-width: 0;
@@ -120,10 +127,12 @@ Board
 }
 
 .task-wrapper {
+  /* position: relative; */
   height: 100%;
 }
 
 .task {
+  position: relative;
   background: white;
   border-radius: 24px;
   padding: 16px;
@@ -199,12 +208,14 @@ Board
 }
 
 .empty {
+  /* display: inline-block; */
   text-align: center;
   color: #a8a8a8;
   border: 2px dotted #a8a8a8;
   border-radius: 10px;
   background-color: #e7e7e7;
   padding: 10px;
+  height: auto;
 }
 
 .no-results {
@@ -278,28 +289,8 @@ Overlay
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
-
-/* 
-Die allgemeine Regel ".overlay button" setzt alle Buttons innerhalb des Overlays auf einen neutralen, transparenten Stil zurück. 
-Das führt jedoch dazu, dass speziell gestylte Buttons (z. B. mit Hintergrundfarbe) ihr gewünschtes Aussehen verlieren.
-
-Daher wurde eine separate Klasse "btn-transparent" erstellt, 
-um gezielt nur Buttons transparent zu stylen, ohne andere globale Button-Styles zu beeinflussen.
-*/
-
-/* .overlay button {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  margin: 0;
-  color: inherit;
-  font: inherit;
-  cursor: pointer;
-  outline: none;
-  box-shadow: none;
-} */
 
 .btn-transparent {
   background-color: transparent;
@@ -505,7 +496,6 @@ Edit-Task
 ---------------------------------------------- */
 
 .editTask-container {
-  overflow-y: auto;
   width: 396px;
   max-height: 664px;
   padding-right: 8px;
@@ -554,16 +544,24 @@ Media queries Board
 
   .task-wrapper {
     display: flex;
+    flex-grow: 0;
     gap: 10px;
     overflow-x: auto;
+    overflow-y: hidden;
   }
 
   .task {
     min-width: 250px;
+    max-width: 250px;
+    margin-bottom: 0;
   }
 
   .empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 44px;
   }
 
   .task-overlay {
@@ -647,7 +645,6 @@ Media queries Board
 
   .overlay-content {
     font-size: 14px;
-    /* margin: 0 16px; */
   }
 
   .tag {
