--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -192,12 +192,10 @@ body {
 
 /* Overlay Style */
 
-.overlay-content {
-  background: white;
-  padding: 30px;
-  border-radius: 10px;
+.overlay-content-contact {
   width: 400px;
-  max-width: 90%;
+  border-radius: 10px;
+  margin: 0 auto;
 }
 
 .modal {
@@ -279,7 +277,7 @@ body {
 
 .avatar-container {
   height: 100%;
-  padding: 92px 56px 0 40px;
+  padding: 92px 56px 0 22px;
 }
 
 .contact-form {
@@ -292,14 +290,14 @@ body {
   flex-grow: 1;
 }
 
-.input-group {
+.input-group-contact {
   position: relative;
   width: 100%;
 }
 
-.input-group input {
+.input-group-contact input {
   width: 100%;
-  padding: 16px 14px 16px 44px;
+  padding: 16px 14px 16px 22px;
   border-radius: 8px;
   border: 1px solid #ccc;
   font-size: 14px;
@@ -633,7 +631,8 @@ h3 {
 
   .modal {
     flex-direction: column;
-    width: 480px;
+    max-width: 480px;
+    width: 100%;
     height: 720px;
     justify-content: space-evenly;
   }
@@ -668,7 +667,7 @@ h3 {
 
   .modal-right {
     width: 100%;
-    height: 55%;
+    height: 60%;
     padding: 24px;
   }
 
@@ -747,46 +746,26 @@ h3 {
   }
 }
 
-@media (max-width: 580px) {
-  .modal {
-    flex-direction: column;
-    width: 380px;
-    height: 640px;
-    justify-content: space-evenly;
-  }
-
-  .modal-left {
-    padding: 0 16px 16px 16px;
+@media (max-width: 480px) {
+  .modal-left h2 {
+    font-size: 2.5rem;
   }
 
   .avatar-container {
-    margin-bottom: 16px;
+    display: flex;
+    justify-content: center;
+    width: 115px;
   }
 
-  .buttons {
-    margin: 24px 0 0 0;
-  }
-}
-
-@media (max-width: 416px) {
-  .modal {
-    flex-direction: column;
-    width: 308px;
-    height: 640px;
-    justify-content: space-evenly;
+  .input-group-contact input::placeholder {
+    font-size: 14px;
   }
 
-  .user-name-container {
-    gap: 8px;
+  .modal-right {
+    height: 58%;
   }
 
-  .avatar-circle {
-    height: 80px;
-    width: 80px;
-    font-size: 24px;
-  }
-
-  .user-name h3 {
-    font-size: 24px;
+  .buttons button {
+    font-size: 14px;
   }
 }
